<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
        android:layout_marginRight="@dimen/activity_horizontal_margin_half"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/editTextPhoneNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:background="@drawable/recipient_bg"
            android:hint="@string/enterphonenumber"
            android:inputType="phone"
            android:padding="@dimen/activity_horizontal_margin_half" />

        <ImageView
            android:id="@+id/pick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:contentDescription="@string/datakontak"
            android:onClick="doLaunchContactPicker"
            android:src="@drawable/ic_contact" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="@string/entermessage"
            android:inputType="textMultiLine"
            android:maxLines="20"
            android:padding="@dimen/activity_vertical_margin" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/buttonSend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:src="@drawable/ic_send"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/btnVoiceInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:paddingTop="@dimen/activity_horizontal_margin_half"
                android:src="@drawable/ic_voice"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>